timescales embed: adjust color contrast, address acessibility issues

--- a/temperature-timescales/css/embed.css
+++ b/temperature-timescales/css/embed.css
@@ -26,6 +26,7 @@
 .message-status h2 {
   font-size: 2vmin;
   margin: 1rem 0;
+  color: white;
 }
 .message-status > div {
   width: auto;
